Fixed friendly faces spacing

--- a/sass/theme/blocks/modules/_contact.scss
+++ b/sass/theme/blocks/modules/_contact.scss
@@ -25,7 +25,6 @@
 
 .users-container {
 	display: flex;
-	justify-content: space-between;
 	.user-profile {
 		display: flex;
 		flex-direction: column;
@@ -36,7 +35,7 @@
 
 .ff-wrapper {
 	display: flex;
-	margin: 2rem 0;
+	margin: 2rem 8rem 0 0;
 	align-items: center;
 }
 
